-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta1
-
None
-
Ubuntu 22.04
-
-
394839e0d (dev), d99a64132 (6.6)
Steps to reproduce:
- Open example: https://doc.qt.io/qt-6/qtdoc-demos-documentviewer-example.html from Qt 6.6.0 b1.
- Build and run the app on Linux desktop.
Expected: Pdf files could be viewed.
Actual: Content looks like encoded. I attached video and logs from the console.
Reproducibility: 100%
NOTES: Not reproducible with the example from Qt 6.5.1.
- is cloned by
-
QTBUG-114615 [DocumentViewer] Edit menu gets multipled each time recent document is opened
-
- Closed
-
-
QTBUG-114618 [DocumentViewer] Cannot view any document on macOS
-
- Closed
-
-
QTBUG-114620 [DocumentViewer] Toolbar icons are not visible on macOS
-
- Closed
-
- is duplicated by
-
QTBUG-114678 DocumentViewer example opens PDF as text
-
- Closed
-
- relates to
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-
| For Gerrit Dashboard: QTBUG-114614 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 486182,4 | DocumentViewer demo: Warn about unsupported mime type before defaulting | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 486347,2 | DocumentViewer demo: Warn about unsupported mime type before defaulting | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |