DocumentViewer demo: Warn about unsupported mime type before defaulting

When a file is opened and its mime type is not supported, the demo
falls back to TxtViewer.

This patch adds a warning popup to notify the user in that case.

Fixes: QTBUG-114614
Change-Id: I5794d0013ecaac37934ac56c4a642998baa65e0a
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 394839e0d442a005f274008b910797f344ce392e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>